quick fix to style.scss to fix overflow issue

--- a/style.scss
+++ b/style.scss
@@ -15,6 +15,7 @@
 
 html {
   font-size: 100%;
+  overflow-x: hidden;
 }
 
 body {
@@ -22,6 +23,7 @@ body {
   font: 18px/1.4 $inter;
   font-weight: 300;
   color: $maya;
+  overflow-x: hidden;
 }
 
 // .container {
